--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ certifi==2019.6.16
 chardet==3.0.4
 Django==3.1.14
 django-jazzmin==2.4.9
-djangorestframework==3.11.2
 idna==2.8
 Pillow==9.0.1
 pytz==2019.1
 sqlparse==0.3.0
-django-recaptcha
-
+django-recaptcha ==3.0.0
+gunicorn>=20.0,<21.0
+dj-database-url>=1.0,<2.0
+whitenoise>=6.0,<7.0
+psycopg2>=2.0,<3.0
